// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OptionsHud (component) > matches the snapshot for a fully-populated HUD 1`] = `
<DocumentFragment>
  <div
    class="flex h-full w-full flex-col overflow-y-auto bg-transparent font-sans"
  >
    <div
      class="flex items-center justify-between gap-4 border-b border-border-default bg-surface px-4 py-2.5"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-activity text-text-secondary"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
          />
        </svg>
        <span
          class="text-sm font-semibold text-text-primary"
        >
          Options HUD
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-[11px] text-text-secondary"
      >
        <span
          class="font-mono font-semibold text-text-primary"
        >
          NIFTY 50
        </span>
        <span
          class="text-text-muted"
        >
          /
        </span>
        <span
          class="font-mono text-text-secondary"
        >
          2024-12-26
        </span>
      </div>
    </div>
    <div
      class="flex flex-col gap-3 p-3"
    >
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="flex items-center justify-between border-b border-border-default px-3 py-1.5"
        >
          <span
            class="text-[10px] font-bold uppercase tracking-widest text-text-muted"
          >
            Agent Options Bias
          </span>
          <span
            class="inline-flex items-center gap-1 rounded-none border px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider bg-emerald-500/10 text-emerald-400 border-emerald-500/30"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trending-up"
              fill="none"
              height="12"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 7h6v6"
              />
              <path
                d="m22 7-8.5 8.5-5-5L2 17"
              />
            </svg>
            Bullish
          </span>
        </div>
        <div
          class="flex items-center justify-between gap-3 px-3 py-2"
        >
          <span
            class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
          >
            Chain context
          </span>
          <span
            class="text-xs"
          >
            <span
              class="font-mono text-text-primary"
            >
              Own chain
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Driving Signals
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex flex-col divide-y divide-border-default/60"
          >
            <div
              class="flex items-center justify-between gap-3 px-3 py-2"
            >
              <span
                class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
              >
                max pain vs spot
              </span>
              <span
                class="text-xs"
              >
                <span
                  class="font-mono text-text-primary"
                >
                  below
                </span>
              </span>
            </div>
            <div
              class="flex items-center justify-between gap-3 px-3 py-2"
            >
              <span
                class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
              >
                futures basis sign
              </span>
              <span
                class="text-xs"
              >
                <span
                  class="font-mono text-text-primary"
                >
                  positive
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Headline Analytics
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              PCR (OI)
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                1.18
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              PCR (Volume)
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                0.94
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Max Pain
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                24,000
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Futures Basis
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                12.5
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Aggregate OI Bias
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Call buildup
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                short_buildup
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Put buildup
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                long_unwinding
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Nearest OI Walls
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Support
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                23,800
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Resistance
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                24,200
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          IV Skew
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Put − Call
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                0.02
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Slope
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                -0.0003
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              ATM IV
            </span>
            <span
              class="text-xs"
            >
              <span
                class="font-mono text-text-primary"
              >
                0.13
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptionsHud (component) > matches the snapshot for an all-null (unavailable) HUD 1`] = `
<DocumentFragment>
  <div
    class="flex h-full w-full flex-col overflow-y-auto bg-transparent font-sans"
  >
    <div
      class="flex items-center justify-between gap-4 border-b border-border-default bg-surface px-4 py-2.5"
    >
      <div
        class="flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-activity text-text-secondary"
          fill="none"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
          />
        </svg>
        <span
          class="text-sm font-semibold text-text-primary"
        >
          Options HUD
        </span>
      </div>
      <div
        class="flex items-center gap-2 text-[11px] text-text-secondary"
      >
        <span
          class="font-mono font-semibold text-text-primary"
        >
          NIFTY 50
        </span>
        <span
          class="text-text-muted"
        >
          /
        </span>
        <span
          class="font-mono text-text-secondary"
        >
          2024-12-26
        </span>
      </div>
    </div>
    <div
      class="flex flex-col gap-3 p-3"
    >
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="flex items-center justify-between border-b border-border-default px-3 py-1.5"
        >
          <span
            class="text-[10px] font-bold uppercase tracking-widest text-text-muted"
          >
            Agent Options Bias
          </span>
          <span
            class="inline-flex items-center gap-1 rounded-none border px-2 py-0.5 text-[10px] font-bold uppercase tracking-wider bg-elevated text-text-muted border-border-default"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-minus"
              fill="none"
              height="12"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
            N/A
          </span>
        </div>
        <div
          class="flex items-center justify-between gap-3 px-3 py-2"
        >
          <span
            class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
          >
            Chain context
          </span>
          <span
            class="text-xs"
          >
            <span
              class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
            >
              N/A
            </span>
          </span>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Driving Signals
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="px-3 py-2"
          >
            <span
              class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
            >
              N/A
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Headline Analytics
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              PCR (OI)
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              PCR (Volume)
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Max Pain
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Futures Basis
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Aggregate OI Bias
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Call buildup
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Put buildup
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          Nearest OI Walls
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Support
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between gap-3 px-3 py-2"
          >
            <span
              class="text-[10px] font-medium uppercase tracking-wider text-text-secondary"
            >
              Resistance
            </span>
            <span
              class="text-xs"
            >
              <span
                class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
              >
                N/A
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col rounded-none border border-border-default bg-surface"
      >
        <div
          class="border-b border-border-default px-3 py-1.5 text-[10px] font-bold uppercase tracking-widest text-text-muted"
        >
          IV Skew
        </div>
        <div
          class="flex flex-col divide-y divide-border-default/60"
        >
          <div
            class="px-3 py-2"
          >
            <span
              class="inline-flex items-center rounded-none border border-border-default bg-elevated px-1.5 py-0.5 text-[9px] font-bold uppercase tracking-widest text-text-muted"
            >
              N/A
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
